# g1

./: .gitignore  01_device_list.py  02_test_AudioDevice.py  03_doubao_asr.py  04_doubao_tts.py  05_doubao_llm.py  README.md  g1.json  g1.py  g1_system_prompt_zh.txt  g1chat_node.py  install.md  pyproject.toml
audio/: audio_device.py  env.py  logging.py  misc.py  volcengine_doubao_asr.py  volcengine_doubao_tts.py
